@@ -239,8 +239,7 @@
                                     <goal>jar</goal>
                                 </goals>
                                 <configuration>  
-                                    <release>${maven.compiler.target}</release>
-                                    <additionalOptions>--enable-preview</additionalOptions>                          
+                                    <release>${maven.compiler.target}</release>                                    
                                     <additionalJOptions>                                
                                         <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.libheiffx</additionalJOption>                                
                                         <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.libheiffx</additionalJOption>
